創建Prometheus Service.yaml
apiVersion: v1
kind: Service
metadata:
   name: prometheus
spec:
   type: ClusterIP
   ports:
   - name: web
      ports: 9090
      protocol: TCP
      targetPort: web
   selector:
      prometheus: prometheus
