ingress不使用功能名稱的轉發.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-1
spec:
  rules:
  - http:
     paths:
     - path: /test
        backend:
           serviceName: test
           servicePort: 80
