ingress將不同host轉到不同服務.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-1
spec:
  rules:
  - host: mywebsite.com
     http:
        paths:
          backend:
             serviceName: test
             servicePort: 80
  - host: test.com
     http:
        paths:
          backend:
             serviceName: service2
             servicePort: 80
